# txaio

./: .gitignore  .readthedocs.yaml  .travis-deploy.sh  .travis.yml  .versions.sh  AI_AUDIT_PROCESS.md  AI_AUDIT_PROCESS_REVIEW.md  AI_POLICY.md  CONTRIBUTING.md  DEVELOPERS.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  deploy.sh  justfile  pyproject.toml  requirements.txt  setup.py  tox.ini  versions.sh
.audit/: README.md  WORK.md  ci.md  oberstet_fix_152.md  oberstet_fix_207.md  oberstet_fix_212.md  oberstet_fix_218.md  oberstet_fix_89.md  oberstet_modernization-phase-11.md  oberstet_modernization-phase-12.md  oberstet_modernization-phase-13.md  oberstet_modernization-phase-14.md  python314
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/templates/: discussion-post.md.j2
.github/workflows/: deploy.yml  main.yml  release-post-comment.yml  release.yml  wheels.yml
doc/: Makefile  api.rst  bare_helpers.rst  conf.py  contents.rst  index.rst  mixin_classes.rst  overview.rst  spelling_wordlist.txt
docs/: AI_AUDIT_PROCESS.md  AI_AUDIT_PROCESS_REVIEW.md  AI_POLICY.rst  api.rst  changelog.rst  conf.py  contents.rst  contributing.rst  getting-started.rst  index.rst  installation.rst  overview.rst  programming-guide.rst  releases.rst
examples/: basic.py  log_interop_stdlib.py  log_interop_twisted.py  multiloop.py  use_asyncio.py  use_twisted.py
src/txaio/: _version.py  aio.py  tx.py
test/: _asyncio_test_utils.py  conftest.py  test_as_future.py  test_batched_timers_aio.py  test_batched_timers_tx.py  test_call_later.py  test_callback.py  test_cancel.py  test_create.py  test_errback.py  test_gather.py  test_imports.py  test_is_future.py  test_legacy_logging.py  test_logging.py  test_packaging.py  test_util.py  util.py
tests/: conftest.py  test_as_future.py  test_batched_timers_tx.py  test_call_later.py  test_create.py  test_is_future.py  test_logging.py  test_util.py  util.py
txaio/: __init__.py  _common.py  _iotype.py  _unframework.py  _util.py  _version.py  aio.py  aio_asyncio.py  aio_py3.py  aio_twisted.py  gvt.py  interfaces.py  testutil.py  tx.py  util.py
